add root parent variable to product Entity